--- a/src/components/headerComponent/Header.css
+++ b/src/components/headerComponent/Header.css
@@ -1,8 +1,11 @@
 .App-header {
+    position: absolute;
+    width: 100vw;
+
     background-color: #24305e;
-    min-height: 20vh;
-    display: block;
-    flex-direction: column;
+    min-height: 10vh;
+    display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
