--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: calc(10px + 1vmin);
-  background-color: #a8d0e6;
+  background-color: #25274D;
 }
 
 
