--- a/src/components/bookcaseComponent/Collage.css
+++ b/src/components/bookcaseComponent/Collage.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-rows: 19% 27% 28% 26%;
     grid-template-columns: 16% 22% 23% 20% 19%;
-    margin-left: 10vw;
+    margin-top: 8rem;
     height: 80vw;
     width: 80vw;
 
