--- a/src/components/bookcaseComponent/CollageItem.css
+++ b/src/components/bookcaseComponent/CollageItem.css
@@ -4,6 +4,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    box-shadow: 0px 0px 8em rgba(0, 0, 0, 0.5) inset,
+                0px 0px 8em rgba(0, 0, 0, .8);
 }
 
 .image {
