--- a/src/components/footerComponent/Footer.css
+++ b/src/components/footerComponent/Footer.css
@@ -4,7 +4,7 @@
     font-size: 2vmin;
     color: #ffffff;
 
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100vw;
   }
