--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 .App {
   display: flex;
   flex-direction: column;
+  align-items: center;
+
   text-align: center;
   position: relative;
-  min-height: 100vh;
   align-content: center;
 }
 
