--- a/src/components/bookcaseComponent/CollageItem.css
+++ b/src/components/bookcaseComponent/CollageItem.css
@@ -1,11 +1,11 @@
 .collageItem {
-    left: 12.48%;
     color: #FFFFFF;
     display: flex;
     flex-direction: column;
     align-items: center;
     box-shadow: 0px 0px 8em rgba(0, 0, 0, 0.5) inset,
                 0px 0px 8em rgba(0, 0, 0, .8);
+    align-self: stretch;
 }
 
 .image {
