--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .App {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  justify-items: center;
 
   text-align: center;
   position: relative;
