--- a/src/components/collectionsComponent/Collections.css
+++ b/src/components/collectionsComponent/Collections.css
@@ -3,6 +3,7 @@
 
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
 
     margin-top: 10vw;
     margin-bottom: 10vw;
@@ -13,9 +14,5 @@
 .collectionsColumn{
     display: flex;
     flex-direction: column;
+    width: 30%;
 }
-
-
-/* flex-direction: row; */
-/* flex-grow: 1; */
-/* justify-content: center; */
