--- a/src/components/collectionsComponent/CollectionsItem.css
+++ b/src/components/collectionsComponent/CollectionsItem.css
@@ -1,11 +1,10 @@
 .collectionsItem {
     display: flex;
     align-items: center;
+    justify-content: center;
     
     box-shadow: 0px 0px 8em rgba(0, 0, 0, 0.5) inset,
                 0px 0px 8em #000000cc;
             
+    color: white;
 }
-
-/* color: #FFFFFF; */
-/* align-self: stretch; */
