--- a/src/components/headerComponent/Header.css
+++ b/src/components/headerComponent/Header.css
@@ -2,6 +2,7 @@
     position: relative;
     top: 0;
     width: 100vw;
+    height: 10vw;
 
     font-size: calc(10px + 2vmin);
     color: #ffffff;
@@ -11,6 +12,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+
+    box-shadow: 0px -2em 8em rgba(0, 0, 0, 0.4) inset;
   }
 
   .App-header-text {
