add parallaxHeaderComponent, fix merge changes

--- a/src/components/parallaxComponent/ParallaxContainer.css
+++ b/src/components/parallaxComponent/ParallaxContainer.css
@@ -9,4 +9,5 @@
     align-items: center;
     width: 100vw;
     height: 30vw;
+    z-index: -1;                     /* added z-index to keep parallax element in layer behind other elements */
 }
