--- a/src/components/parallaxHeaderComponent/ParallaxHeader.css
+++ b/src/components/parallaxHeaderComponent/ParallaxHeader.css
@@ -1,27 +1,37 @@
-.parallaxImage{
-    height: 50vw;
+.parallaxHeader{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100vw;
+    height: 100vh;
+}
+
+.parallaxImage{
+    height: 100%;
+    width: 100%;
 }  
 
 .header {
-    background: rgba(34,34,34,0.60);
-    color: white;
-    left: 50%;
-    top: 25vw;
-    position: absolute;
-    padding: 20px;
-    transform: translate(-50%,-50%);
     display: flex;
     flex-direction: row;
+    align-items: center;
+
+    background: rgba(34,34,34,0.60);
     backdrop-filter: blur(3px);
+
+    position: absolute;
+    left: auto;
+    top: auto;
+    padding: 2%;
 }
 
 .childElem {
     margin: 1vw;
+    font-size: 4vw;
+    color: white;
 }
 
 .appLogo {
-    margin: 1vw;
     width: 5vw;
     height: auto;
 }
