--- a/src/index.css
+++ b/src/index.css
@@ -13,29 +13,29 @@ body {
 }
 
 h1 {
-  font-size: 8vmin;
+  font-size: 5vw;
 }
 
 h2 {
-  font-size: 7vmin;
+  font-size: 4.4vw;
 }
 
 h3 {
-  font-size: 6vmin;
+  font-size: 3.8vw;
 }
 
 h4 {
-  font-size: 5vmin;
+  font-size: 3.2vw;
 }
 
 h5 {
-  font-size: 4vmin;
+  font-size: 2.6vw;
 }
 
 h5 {
-  font-size: 3vmin;
+  font-size: 2vw;
 }
 
 h6 {
-  font-size: 2vmin;
+  font-size: 1.4vw;
 }
